--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^17.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -21,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server":"json-server --watch json-server/db.json --port 3001",
-    "dev":"npx concurrently -k \"npm run json-server\" \"npm start\""
+    "json-server": "json-server --watch json-server/db.json --port 3001",
+    "dev": "npx concurrently -k \"npm run json-server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
